--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>app</artifactId>
-    <version>0.0.1</version>
+    <version>1.0.0</version>
     <name>python</name>
     <description>python</description>
     <url />
@@ -63,7 +63,24 @@
             <version>22.0.2</version>
         </dependency>
 
-
+    
+            <!-- JWT tokens -->
+          <!-- <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+          </dependency>
+          <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.5</version>
+          </dependency>
+          <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.11.5</version>
+          </dependency>
+      -->
 
         <dependency>
             <groupId>org.postgresql</groupId>
