--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pythonapp
 spring.datasource.url=jdbc:postgresql://pg-f7513e8-alicja-1dd1.b.aivencloud.com:20706/defaultdb
 spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_OikfS-wRtj746KxnEFa
+spring.datasource.password=****
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
